<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:backgroundTint="@color/white"
    tools:context=".screen_logueo.RegisterActivity">

    <ImageView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:src="@drawable/circle_pink_bottom" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:src="@drawable/circle_pink" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:src="@drawable/icon_register" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/registrate_y_disfruta_ahora"
            android:textAlignment="center"
            android:textColor="#404040"
            android:textSize="13sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/familia_feliz"
            android:textAlignment="center"
            android:textColor="#404040"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_rounded"
            android:drawableStart="@drawable/emoticon_happy_outline"
            android:drawablePadding="10dp"
            android:hint="@string/username"
            android:padding="13dp"
            android:textColor="#545454"
            android:textColorHint="#545454" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_rounded"
            android:drawableStart="@drawable/paper_plane"
            android:drawablePadding="10dp"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:padding="13dp"
            android:textColor="#545454"
            android:textColorHint="#545454" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#545454"
            app:placeholderTextColor="#545454"
            app:endIconMode="password_toggle"
            app:endIconTint="#545454"
            app:placeholderText="Contraseña"
            app:hintAnimationEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_text_rounded"
                android:drawableStart="@drawable/shield_lock_outline"
                android:drawablePadding="10dp"
                android:inputType="textPassword"
                android:padding="13dp"
                android:textColor="#545454"
                android:textColorHint="#545454" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#545454"
            app:placeholderTextColor="#545454"
            app:endIconMode="password_toggle"
            app:endIconTint="#545454"
            app:placeholderText="Confirmar contraseña"
            app:hintAnimationEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_text_rounded"
                android:drawableStart="@drawable/security"
                android:drawablePadding="10dp"
                android:inputType="textPassword"
                android:padding="13dp"
                android:textColor="#545454"
                android:textColorHint="#545454" />
        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:buttonTint="#545454"
            android:text="@string/acepto_todos_los_t_rminos_y_condiciones"
            android:textColor="#545454"
            android:textSize="10sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_rounded"
            android:backgroundTint="@color/orange"
            android:padding="20dp"
            android:text="Registrarse"
            android:textColor="@color/white"
            android:textSize="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ya tienes una cuenta?"
                android:textColor="#545454" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" Ir al Login"
                android:textColor="@color/orange" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>